# Solana-Setup-Hello-World-Deployment

./: README.md  Ulzhan Commands.docx
hello_world/: Cargo.toml
hello_world/src/: lib.rs
